# prefect-poc

./: .gitignore  README.md  docker-compose.yml
apis/calculator/: main.py  pyproject.toml
apis/core_app/: Dockerfile  data.csv  pyproject.toml  setup_dev.sh  setup_prod.sh  start_celery_worker.sh
apis/core_app/core/: admin.py  models.py  tasks.py
apis/core_app/core/api/: serializers.py  viewsets.py
apis/core_app/core/management/commands/: createadmin.py
apis/core_app/core/migrations/: 0001_initial.py  0002_food.py  0002_value.py
apis/core_app/core/templates/admin/: csv_upload.html
apis/core_app/core/templates/admin/core/food/: change_list.html
apis/core_app/core/utils/: helpers.py  tasks.py
apis/core_app/core_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apis/random_name/: Dockerfile  main.py  pyproject.toml
apis/random_number/: main.py  pyproject.toml
nginx/: nginx.conf
prefect_app/: Makefile  main.py  pyproject.toml  tasks.py
